# Pubchem-annotation-batch

./: ._tmp_append_fo9aoav1.csv  README.md  pyproject.toml  requirements.txt  run_batch.sh  run_batch_main(TCMM).py  run_batch_main.py  smiles_annotation关联结果.csv  smiles_annotation关联结果_dropna.csv
checkpoints/: state.json
data/inputs/: Herb-Ingredient_csmiles_replaced.csv
notebooks/: get_annotation.ipynb
output/: smiles_annotation关联结果(TCMM).csv  smiles_annotation关联结果.csv
src/: cli.py  config.py  processor.py  pubchem.py  storage.py  utils.py
tests/: test_processor.py
